[package]
#authors = { workspace = true }
#edition = { workspace = true }
#license = { workspace = true }
#name = "starcoin-node-viewer"
#publish = { workspace = true }
#version = "2.0.0-alpha"
#homepage = { workspace = true }
#repository = { workspace = true }
#rust-version = { workspace = true }
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
homepage = "https://starcoin.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/starcoinorg/starcoin"
name = "starcoin-node-viewer"
version = "2.0.0-alpha"
description = "Starcoin Node Viewer"

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
anyhow = "1.0.86"
dagre_rust = "0.0.5"
graphlib_rust = "0.0.2"
dirs = "5.0.1"
starcoin-config = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-dag = { workspace = true }
starcoin-genesis = { workspace = true }
starcoin-chain = { workspace = true }
starcoin-types = { workspace = true }

[profile.release]
opt-level = "z"
lto = true

[package.metadata.bundle]
maintainer = "BobOng <libo.weng@gmail.com>"
description = "Starcoin MagicBox"
depends = "libc6 (>= 2.27)"