[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-node"
publish = false
version = "1.12.5"

[dependencies]
actix = "0.13"
actix-rt = "2.6"
anyhow = "1.0.41"
async-std = "1.12"
async-trait = "0.1"
backtrace = "0.3"
chrono = "0.4.19"
futures = "0.3.12"
futures-timer = "3.0"
network-api = {path = "../network/api"}
network-rpc-core = {path = "../network-rpc/core"}
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
starcoin-account-api = {path = "../account/api"}
starcoin-account-service = {path = "../account/service"}
starcoin-block-relayer = {path = "../block-relayer"}
starcoin-chain-notify = {path = "../chain/chain-notify"}
starcoin-chain-service = {path = "../chain/service"}
starcoin-config = {path = "../config"}
starcoin-consensus = {path = "../consensus"}
starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
starcoin-dev = {path = "../vm/dev"}
starcoin-executor = {path = "../executor"}
starcoin-genesis = {path = "../genesis"}
starcoin-logger = {path = "../commons/logger"}
starcoin-metrics = {path = "../commons/metrics", features = ["server"]}
starcoin-miner = {path = "../miner"}
starcoin-miner-client = {path = "../cmd/miner_client"}
starcoin-network = {path = "../network"}
starcoin-network-rpc = {path = "../network-rpc"}
starcoin-network-rpc-api = {path = "../network-rpc/api"}
starcoin-node-api = {path = "./api"}
starcoin-rpc-client = {path = "../rpc/client"}
starcoin-rpc-server = {path = "../rpc/server"}
starcoin-service-registry = {path = "../commons/service-registry"}
starcoin-state-api = {path = "../state/api"}
starcoin-state-service = {path = "../state/service"}
starcoin-statedb = {path = "../state/statedb"}
starcoin-storage = {path = "../storage"}
starcoin-stratum = {path = "../stratum"}
starcoin-sync = {path = "../sync"}
starcoin-sync-api = {package = "starcoin-sync-api", path = "../sync/api"}
starcoin-txpool = {path = "../txpool"}
starcoin-txpool-api = {path = "../txpool/api"}
starcoin-types = {path = "../types"}
starcoin-vm-runtime = {path = "../vm/vm-runtime"}
thiserror = "1.0"
timeout-join-handler = {path = "../commons/timeout-join-handler"}
tokio = {version = "^1", features = ["full"]}
[dev-dependencies]
stest = {path = "../commons/stest"}
