[dependencies]
actix = { workspace = true }
actix-rt = { workspace = true }
anyhow = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
backtrace = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
network-api = { workspace = true }
network-p2p-core = { workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }
starcoin-account-api = { workspace = true }
starcoin-account-service = { workspace = true }
starcoin-block-relayer = { workspace = true }
starcoin-chain-notify = { workspace = true }
starcoin-chain-service = { workspace = true }
starcoin-config = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-dev = { workspace = true }
starcoin-executor = { workspace = true }
starcoin-genesis = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-metrics = { features = ["server"], workspace = true }
starcoin-miner = { workspace = true }
starcoin-miner-client = { workspace = true }
starcoin-network = { workspace = true }
starcoin-network-rpc = { workspace = true }
starcoin-network-rpc-api = { workspace = true }
starcoin-node-api = { workspace = true }
starcoin-rpc-client = { workspace = true }
starcoin-rpc-server = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-state-service = { workspace = true }
starcoin-statedb = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-stratum = { workspace = true }
starcoin-sync = { workspace = true }
starcoin-sync-api = { package = "starcoin-sync-api", workspace = true }
starcoin-txpool = { workspace = true }
starcoin-txpool-api = { workspace = true }
starcoin-types = { workspace = true }
starcoin-vm-runtime = { workspace = true }
thiserror = { workspace = true }
timeout-join-handler = { workspace = true }
tokio = { features = ["full"], workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
stest = { workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-node"
publish = { workspace = true }
version = "1.13.12-alpha"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
