[package]
name = "starcoin-relayer"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix = "0.9"
futures = "0.3"
once_cell = "1.4.0"

config = {path = "../config", package="starcoin-config"}
crypto = { package="starcoin-crypto", path = "../commons/crypto"}
traits = {path = "../core/traits", package="starcoin-traits"}
bus = { path = "../bus", package = "starcoin-bus"}
logger = {path = "../commons/logger",package="starcoin-logger"}
async-trait = "0.1"
starcoin-txpool-api = {path="../txpool/api"}
network-api = {package="network-api", path="../network/api"}
starcoin-sync-api = {package="starcoin-sync-api", path="../sync/api"}
starcoin-canonical-serialization = { package="starcoin-canonical-serialization", path = "../commons/scs"}
starcoin-types = {path = "../types", package = "starcoin-types" }
starcoin-metrics = {path = "../commons/metrics"}

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
actix-rt = "1.0"
miner = {path = "../miner", package="starcoin-miner" }
hex = "0.4.2"
starcoin-wallet-api = { path = "../wallet/api"}
libp2p = "0.19.1"
stest = { path = "../commons/stest"}
