[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-storage"
publish = false
version = "1.12.5"

[dependencies]
anyhow = "1.0.41"
bcs-ext = {package = "bcs-ext", path = "../commons/bcs_ext"}
byteorder = "1.4.3"
chrono = "0.4"
crypto = {package = "starcoin-crypto", git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
lru = "0.7.8"
num_enum = "0.5.7"
once_cell = "1.13.0"
parking_lot = "0.12.1"
proptest = {version = "1.0.0", optional = true}
proptest-derive = {version = "0.3.0", optional = true}
serde = {version = "1.0.130"}
starcoin-types = {path = "../types"}
thiserror = "1.0"
#state-tree = { package="starcoin-state-tree", path = "../state/state-tree"}
starcoin-accumulator = {package = "starcoin-accumulator", path = "../commons/accumulator"}
starcoin-state-store-api = {path = "../state/state-store-api"}
#starcoin-proptest-helpers = { path = "../commons/proptest-helpers", optional = true}
coarsetime = "0.1.22"
forkable-jellyfish-merkle = {path = "../commons/forkable-jellyfish-merkle", package = "forkable-jellyfish-merkle"}
logger = {path = "../commons/logger", package = "starcoin-logger"}
network-types = {path = "../network/types"}
starcoin-config = {path = "../config"}
starcoin-metrics = {path = "../commons/metrics"}
starcoin-uint = {path = "../types/uint"}

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
version = "0.18"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
rand = "0.8.5"
starcoin-types = {path = "../types", features = ["fuzzing"]}
stest = {path = "../commons/stest"}

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "starcoin-types/fuzzing"]
