[dependencies]
anyhow = { workspace = true }
bcs-ext = { package = "bcs-ext", workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true }
lru = { workspace = true }
num_enum = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
proptest = { optional = true, workspace = true }
proptest-derive = { optional = true, workspace = true }
serde = { workspace = true }
starcoin-types = { workspace = true }
starcoin-crypto = { workspace = true }
thiserror = { workspace = true }
starcoin-accumulator = { package = "starcoin-accumulator", workspace = true }
starcoin-state-store-api = { workspace = true }
coarsetime = { workspace = true }
forkable-jellyfish-merkle = { package = "forkable-jellyfish-merkle", workspace = true }
starcoin-logger = { package = "starcoin-logger", workspace = true }
network-types = { workspace = true }
network-p2p-types = { workspace = true }
starcoin-config = { workspace = true }
starcoin-metrics = { workspace = true }
starcoin-uint = { workspace = true }
starcoin-vm-types = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }
starcoin-types = { features = ["fuzzing"], workspace = true }
starcoin-crypto = { workspace = true }
stest = { workspace = true }

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "starcoin-types/fuzzing"]

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-storage"
publish = { workspace = true }
version = "1.13.12-alpha"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
workspace = true
