[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
futures = { workspace = true }
hex = { default-features = false, workspace = true }
jsonrpc-tcp-server = { git = "https://github.com/starcoinorg/jsonrpc", rev = "1d161498e1c0de6f4b1f00442d81c98c421db7e5" }
jsonrpc-derive = { git = "https://github.com/starcoinorg/jsonrpc", rev = "1d161498e1c0de6f4b1f00442d81c98c421db7e5" }
jsonrpc-core = { git = "https://github.com/starcoinorg/jsonrpc", rev = "1d161498e1c0de6f4b1f00442d81c98c421db7e5", features = ["arbitrary_precision"] }
jsonrpc-pubsub = { git = "https://github.com/starcoinorg/jsonrpc", rev = "1d161498e1c0de6f4b1f00442d81c98c421db7e5" }
jsonrpc-core-client = { git = "https://github.com/starcoinorg/jsonrpc", rev = "1d161498e1c0de6f4b1f00442d81c98c421db7e5" }
serde = { workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }
starcoin-config = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-miner = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-types = { workspace = true }

[dev-dependencies]
stest = { workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
name = "starcoin-stratum"
version = "1.13.11"
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
