[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
futures = { workspace = true }
hex = { features = ["serde"], workspace = true }
jsonrpc-tcp-server = { git = "https://github.com/starcoinorg/jsonrpc", rev = "e895b6cc5897f3813a953a9a6bb4718b4856ab19" }
jsonrpc-derive = { git = "https://github.com/starcoinorg/jsonrpc", rev = "e895b6cc5897f3813a953a9a6bb4718b4856ab19" }
jsonrpc-core = { git = "https://github.com/starcoinorg/jsonrpc", rev = "e895b6cc5897f3813a953a9a6bb4718b4856ab19", features = ["arbitrary_precision"] }
jsonrpc-pubsub = { git = "https://github.com/starcoinorg/jsonrpc", rev = "e895b6cc5897f3813a953a9a6bb4718b4856ab19" }
jsonrpc-core-client = { git = "https://github.com/starcoinorg/jsonrpc", rev = "e895b6cc5897f3813a953a9a6bb4718b4856ab19" }
serde = { workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }
starcoin-config = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-miner = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-types = { workspace = true }
futures-timer = { workspace = true }

[dev-dependencies]
stest = { workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
name = "starcoin-stratum"
version = "2.0.1"
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
