[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
name = "starcoin-sync"
version = "1.12.6"

[dependencies]
anyhow = "1.0.41"
async-std = "1.12"
async-trait = "0.1"
bcs-ext = {package = "bcs-ext", path = "../commons/bcs_ext"}
config = {path = "../config", package = "starcoin-config"}
consensus = {path = "../consensus", package = "starcoin-consensus"}
executor = {path = "../executor", package = "starcoin-executor"}
forkable-jellyfish-merkle = {path = "../commons/forkable-jellyfish-merkle"}
futures = "0.3.12"
futures-retry = "0.6"
futures-timer = "3.0"
itertools = {version = "0.10.3", default-features = false}
logger = {path = "../commons/logger", package = "starcoin-logger"}
network = {path = "../network", package = "starcoin-network"}
network-api = {package = "network-api", path = "../network/api"}
network-rpc-core = {path = "../network-rpc/core"}
parking_lot = "0.12"
pin-project = "1.0.1"
pin-utils = "0.1.0"
rand = "0.8.5"
starcoin-accumulator = {package = "starcoin-accumulator", path = "../commons/accumulator"}
starcoin-chain = {path = "../chain"}
starcoin-chain-api = {path = "../chain/api"}
starcoin-chain-service = {path = "../chain/service"}
starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
starcoin-genesis = {path = "../genesis"}
starcoin-metrics = {path = "../commons/metrics"}
starcoin-network-rpc = {path = "../network-rpc/", package = "starcoin-network-rpc"}
starcoin-network-rpc-api = {path = "../network-rpc/api"}
starcoin-service-registry = {path = "../commons/service-registry"}
starcoin-state-api = {path = "../state/api"}
starcoin-state-tree = {package = "starcoin-state-tree", path = "../state/state-tree"}
starcoin-storage = {path = "../storage"}
starcoin-sync-api = {package = "starcoin-sync-api", path = "../sync/api"}
starcoin-time-service = {path = "../commons/time-service"}
starcoin-transaction-builder = {path = "../vm/transaction-builder"}
starcoin-txpool-api = {path = "../txpool/api"}
starcoin-types = {path = "../types"}
starcoin-vm-types = {path = "../vm/types"}
stest = {path = "../commons/stest"}
stream-task = {path = "../commons/stream-task"}
sysinfo = "0.25.1"
thiserror = "1.0"
txpool = {path = "../txpool", package = "starcoin-txpool"}
[dev-dependencies]
hex = "0.4.3"
miner = {path = "../miner", package = "starcoin-miner"}
starcoin-account-api = {path = "../account/api"}
starcoin-block-relayer = {path = "../block-relayer"}
starcoin-chain-mock = {path = "../chain/mock"}
starcoin-node = {path = "../node"}
starcoin-state-service = {path = "../state/service"}
starcoin-statedb = {path = "../state/statedb"}
starcoin-txpool-mock-service = {path = "../txpool/mock-service"}
test-helper = {path = "../test-helper"}
tokio = {version = "^1", features = ["full"]}
