[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
bcs-ext = { package = "bcs-ext", workspace = true }
forkable-jellyfish-merkle = { workspace = true }
futures = { workspace = true }
futures-retry = { workspace = true }
futures-timer = { workspace = true }
itertools = { default-features = false, workspace = true }
starcoin-logger = { package = "starcoin-logger", workspace = true }
starcoin-config = { workspace = true }
starcoin-network = { package = "starcoin-network", workspace = true }
network-api = { workspace = true }
network-p2p-core = { workspace = true }
parking_lot = { workspace = true }
pin-project = { workspace = true }
pin-utils = { workspace = true }
rand = { workspace = true }
starcoin-accumulator = { package = "starcoin-accumulator", workspace = true }
starcoin-chain = { workspace = true }
starcoin-chain-api = { workspace = true }
starcoin-chain-service = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-executor = { workspace = true }
starcoin-genesis = { workspace = true }
starcoin-metrics = { workspace = true }
starcoin-network-rpc = { package = "starcoin-network-rpc", workspace = true }
starcoin-network-rpc-api = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-state-tree = { package = "starcoin-state-tree", workspace = true }
starcoin-storage = { workspace = true }
starcoin-sync-api = { package = "starcoin-sync-api", workspace = true }
starcoin-time-service = { workspace = true }
starcoin-transaction-builder = { workspace = true }
starcoin-txpool = { workspace = true }
starcoin-txpool-api = { workspace = true }
starcoin-types = { workspace = true }
starcoin-vm-types = { workspace = true }
stest = { workspace = true }
stream-task = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
starcoin-miner = { workspace = true }
starcoin-account-api = { workspace = true }
starcoin-block-relayer = { workspace = true }
starcoin-chain-mock = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-node = { workspace = true }
starcoin-state-service = { workspace = true }
starcoin-statedb = { workspace = true }
starcoin-txpool-mock-service = { workspace = true }
starcoin-executor = { workspace = true }
test-helper = { workspace = true }
tokio = { features = ["full"], workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
name = "starcoin-sync"
version = "1.13.12-alpha"
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
