[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
backtrace = { workspace = true }
bcs-ext = { package = "bcs-ext", workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
hex = { workspace = true }
network-api = { workspace = true }
network-p2p-types = { workspace = true }
network-p2p-core = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starcoin-account-api = { workspace = true }
starcoin-account-service = { workspace = true }
starcoin-chain = { workspace = true }
starcoin-config = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-executor = { workspace = true }
starcoin-genesis = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-miner = { workspace = true }
starcoin-move-compiler = { workspace = true }
starcoin-network = { workspace = true }
starcoin-network-rpc = { workspace = true }
starcoin-network-rpc-api = { workspace = true }
starcoin-node = { workspace = true }
starcoin-node-api = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-statedb = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-transaction-builder = { workspace = true }
starcoin-txpool = { workspace = true }
starcoin-txpool-api = { workspace = true }
starcoin-types = { workspace = true }
starcoin-vm-types = { workspace = true }
stdlib = { workspace = true }
move-ir-compiler = { workspace = true }

starcoin-vm2-statedb = { workspace = true }
starcoin-vm2-types = { workspace = true }
starcoin-vm2-crypto = { workspace = true }
starcoin-vm2-transaction-builder = { workspace = true}


[dev-dependencies]
stest = { workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "test-helper"
publish = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
