[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "testsuite"
publish = false
version = "1.12.5"

[dependencies]
anyhow = "1.0.41"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
clap = { version = "3", features = ["derive"] }
regex = "1.6.0"
starcoin-config = { path = "../config" }
starcoin-consensus = { path = "../consensus" }
starcoin-executor = { path = "../executor" }
starcoin-network = { path = "../network" }
starcoin-txpool = { path = "../txpool" }
starcoin-chain = { path = "../chain" }
starcoin-rpc-server = { path = "../rpc/server" }
starcoin-rpc-client = { path = "../rpc/client" }
starcoin-storage = { path = "../storage" }
starcoin-miner = { path = "../miner" }
starcoin-node = { path = "../node" }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc" }
starcoin-logger = { path = "../commons/logger" }
starcoin-cmd = { package = "starcoin-cmd", path = "../cmd/starcoin" }
scmd = { path = "../commons/scmd" }
starcoin-types = { path = "../types" }
starcoin-vm-runtime = { path = "../vm/vm-runtime" }
starcoin-vm-types = { path = "../vm/types" }
starcoin-account-api = { path = "../account/api" }
starcoin-account-provider = { path = "../account/provider" }
starcoin-state-api = { path = "../state/api" }
cucumber = { package = "cucumber_rust", version = "^0.6.0" }
jsonpath = "0.1.1"
jpst = "0.1.1"

[dev-dependencies]
starcoin-transaction-builder = {path = "../vm/transaction-builder"}

[[test]]
harness = false
name = "integration"
test = false
