[[test]]
harness = false
name = "integration"
test = false

[dependencies]
anyhow = { workspace = true }
clap = { features = ["derive"], workspace = true }
cucumber = { workspace = true }
jpst = { workspace = true }
jsonpath = { workspace = true }
regex = { workspace = true }
scmd = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_bytes = { workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }
starcoin-account-api = { workspace = true }
starcoin-account-provider = { workspace = true }
starcoin-chain = { workspace = true }
starcoin-cmd = { package = "starcoin-cmd", workspace = true }
starcoin-config = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-executor = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-miner = { workspace = true }
starcoin-network = { workspace = true }
starcoin-node = { workspace = true }
starcoin-rpc-client = { workspace = true }
starcoin-rpc-api = { workspace = true }
starcoin-rpc-server = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-txpool = { workspace = true }
starcoin-types = { workspace = true }
starcoin-vm-runtime = { workspace = true }
starcoin-vm-types = { workspace = true }

[dev-dependencies]
starcoin-transaction-builder = { workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "testsuite"
publish = { workspace = true }
version = "1.13.12-alpha"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
